[package]
name = "configuration_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "configuration_server"

[lib]
doctest = false

[dependencies]
axum = { workspace = true, features = ["http1", "tokio", "tower-log", "tracing"] }
axum-server = { workspace = true, features = ["tls-rustls-no-provider"] }
config = { workspace = true, features = ["toml"] }
etag.workspace = true
http.workspace = true
rustls = { workspace = true, features = ["logging", "std", "ring", "tls12"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "fmt", "tracing-log", "smallvec", "parking_lot", "ansi"] }

http_utils = { path = "../lib/http_utils", features = ["server"] }
utils.path = "../lib/utils"
