[package]
name = "flutter_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "wallet_core"
crate-type = ["staticlib", "cdylib"]
doctest = false

[dependencies]
anyhow.workspace = true
backtrace.workspace = true
flutter_rust_bridge.workspace = true
itertools.workspace = true
parking_lot.workspace = true
sentry = { workspace = true, features = [
    "backtrace",
    "contexts",
    "panic",
    "debug-images",
    "reqwest",
    "rustls",
] }
sentry-panic.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "fmt", "tracing-log", "parking_lot"] }
url.workspace = true

error_category.path = "../error_category"
flutter_api_macros.path = "flutter_api_macros"
wallet.path = "../wallet"

[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
cstr.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
oslog.workspace = true
