[package]
name = "flutter_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "wallet_core"
crate-type = ["staticlib", "cdylib"]
doctest = false

[features]
allow_insecure_url = ["wallet/allow_insecure_url"]

[dependencies]
anyhow.workspace = true
backtrace.workspace = true
chrono.workspace = true
itertools.workspace = true
parking_lot.workspace = true
sentry = { workspace = true, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

error_category.path = "../lib/error_category"
flutter_api_macros.path = "flutter_api_macros"
wallet.path = "../wallet"

[dependencies.flutter_rust_bridge]
version = "=2.11.1"
default-features = false
# default - log - wasm-start
features = ["anyhow", "dart-opaque", "portable-atomic", "rust-async", "thread-pool", "user-utils"]

[dev-dependencies]
rstest.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
cstr.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
oslog.workspace = true
