[package]
name = "gba_hc_converter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
aes-gcm = { workspace = true, features = ["std", "rand_core"] }
anyhow.workspace = true
askama.workspace = true
askama_web = { workspace = true, features = ["axum-0.8"] }
axum = { workspace = true, features = ["form", "json"] }
axum_csrf = { workspace = true, features = ["layer"] }
base64.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
clio = { workspace = true, features = ["clap-parse"] }
config = { workspace = true, features = ["toml"] }
crypto-common.workspace = true
csv.workspace = true
derive_more = { workspace = true, features = ["as_ref", "debug", "from"] }
hex = { workspace = true, features = ["serde"] }
hmac.workspace = true
http.workspace = true
indexmap.workspace = true
itertools.workspace = true
nutype = { workspace = true, features = ["regex", "serde"] }
pem.workspace = true
quick-xml = { workspace = true, features = ["async-tokio", "serialize", "overlapped-lists"] }
regex.workspace = true
rand_core.workspace = true
reqwest.workspace = true
rpassword.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["base64"] }
sha2.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "net"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }
trait-variant.workspace = true

crypto.path = "../lib/crypto"
http_utils = { path = "../lib/http_utils", features = ["server", "client"] }
utils = { path = "../lib/utils" }

[dev-dependencies]
assert-json-diff.workspace = true
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
