[package]
name = "nl_wallet_mdoc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
examples = ["dep:anyhow", "dep:hex-literal"]
generate = ["dep:rcgen"]
mock = [
    "examples",
    "generate",
    "wallet_common/mock",
    "wallet_common/software-keys",
]

[dependencies]
aes-gcm = { workspace = true, features = ["std"] }
async-trait.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
ciborium.workspace = true
coset = { workspace = true, features = ["std"] }
dashmap.workspace = true
futures.workspace = true
hex.workspace = true
indexmap = { workspace = true, features = ["serde"] }
once_cell.workspace = true
p256 = { workspace = true, features = ["ecdh", "ecdsa", "pem", "serde", "std"] }
reqwest = { workspace = true, features = ["json"] }
ring.workspace = true
rustls-webpki.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
serde_bytes = { workspace = true, features = ["std"] }
serde_json.workspace = true
serde_repr.workspace = true
serde_with = { workspace = true, features = ["chrono"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "time", "parking_lot"] }
url = { workspace = true, features = ["serde"] }
x509-parser = { workspace = true, features = ["verify", "validate"] }

anyhow = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true, features = ["x509-parser"] }

fieldnames.path = "./fieldnames"
fieldnames_derive.path = "./fieldnames_derive"
wallet_common.path = "../wallet_common"

[dev-dependencies]
assert_matches.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["macros"] }
rstest.workspace = true

nl_wallet_mdoc = { path = ".", features = ["mock", "examples"] }
