[package]
name = "mock_relying_party"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
askama.workspace = true
axum = { workspace = true, features = [
    "http1",
    "form",
    "tokio",
    "tower-log",
    "tracing",
    "headers",
    "macros",
] }
axum-extra.workspace = true
base64.workspace = true
config.workspace = true
dashmap.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_url_params.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["parking_lot"] }
url = { workspace = true, features = ["serde"] }

nl_wallet_mdoc.path = "../mdoc"
wallet_common.path = "../wallet_common"
wallet_server.path = "../wallet_server"

