[package]
name = "mock_relying_party"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]
# Allow the disclosure return URL and its prefix to use http://
allow_http_return_url = ["wallet_server/allow_http_return_url"]

[dependencies]
anyhow.workspace = true
askama.workspace = true
axum = { workspace = true, features = [
    "form",
    "headers",
    "http1",
    "macros",
    "query",
    "tokio",
    "tower-log",
    "tracing",
] }
axum-extra.workspace = true
base64.workspace = true
config.workspace = true
dashmap.workspace = true
reqwest.workspace = true
sentry.workspace = true
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
] }
tower-http = { workspace = true, features = ["trace", "fs"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["parking_lot"] }
url = { workspace = true, features = ["serde"] }

nl_wallet_mdoc.path = "../mdoc"
wallet_common = { path = "../wallet_common", features = ["sentry"] }
wallet_server.path = "../wallet_server"
