[package]
name = "mock_relying_party"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]
# Allow the disclosure return URL and its prefix to use http://
allow_insecure_url = ["openid4vc/allow_insecure_url"]

[dependencies]
accept-language.workspace = true
anyhow.workspace = true
askama.workspace = true
axum = { workspace = true, features = ["http1", "query", "tokio", "tower-log", "tracing"] }
base64.workspace = true
config = { workspace = true, features = ["preserve_order", "toml"] }
futures = { workspace = true, features = ["std"] }
http.workspace = true
indexmap.workspace = true
nutype = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_with = { workspace = true, features = ["macros"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["parking_lot", "rt-multi-thread", "net"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "fs"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "std",
    "env-filter",
    "fmt",
    "json",
    "ansi",
    "smallvec",
    "tracing-log",
    "parking_lot",
] }
url = { workspace = true, features = ["serde"] }

crypto.path = "../lib/crypto"
http_utils = { path = "../lib/http_utils", features = ["axum"] }
mdoc.path = "../lib/mdoc"
openid4vc.path = "../lib/openid4vc"
openid4vc_server = { path = "../lib/openid4vc_server", features = ["disclosure"] }
wallet_common = { path = "../lib/wallet_common" }

[dev-dependencies]
rstest.workspace = true
