[package]
name = "openid4vc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[test]]
name = "issuance"
path = "tests/issuance.rs"
required-features = ["integration"]

[[test]]
name = "disclosure"
path = "tests/disclosure.rs"
required-features = ["integration"]

[features]
# Include implementations of the axum IntoResponse trait.
axum = ["dep:axum"]
# Include mock implementations for testing
mock = ["dep:mockall", "nl_wallet_mdoc/examples", "nl_wallet_mdoc/software_keys", "nl_wallet_mdoc/mock"]
# All features needed to run the integration test
integration = ["mock", "dep:ciborium"]

[dependencies]
base64.workspace = true
biscuit.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
derive_more = { workspace = true, features = ["from"] }
futures = { workspace = true, features = ["std", "async-await"] }
hex.workspace = true
indexmap.workspace = true
itertools.workspace = true
josekit = { workspace = true, features = ["vendored"] }
jsonwebtoken.workspace = true
mime.workspace = true
nutype = { workspace = true, features = ["serde"] }
once_cell.workspace = true
p256 = { workspace = true, features = ["ecdsa", "pem", "serde", "std"] }
rand_core.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
ring.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_with = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
trait-variant.workspace = true
url = { workspace = true, features = ["serde"] }
x509-parser.workspace = true

axum = { workspace = true, optional = true, features = ["json"] }
ciborium = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }

wallet_common.path = "../wallet_common"
nl_wallet_mdoc.path = "../mdoc"

[dev-dependencies]
assert_matches.workspace = true
http.workspace = true
mockall.workspace = true
parking_lot.workspace = true
rstest.workspace = true
serde_bytes = { workspace = true, features = ["std"] }
wiremock.workspace = true

nl_wallet_mdoc = { path = "../mdoc", features = ["mock", "software_key_factory", "generate", "test", "examples"] }
